[gd_scene load_steps=13 format=2]

[ext_resource path="res://imagenes/ecenarios/escenario_scorpions.png" type="Texture" id=1]
[ext_resource path="res://escena/personaje.tscn" type="PackedScene" id=2]
[ext_resource path="res://escena/enemigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://escena/barra_de_vida.tscn" type="PackedScene" id=4]
[ext_resource path="res://escena/puntajeUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://escena/objeto_vida.tscn" type="PackedScene" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://spawner.gd" type="Script" id=8]
[ext_resource path="res://spawner_vida.gd" type="Script" id=9]
[ext_resource path="res://sonidos/Scorpions-Rock-You-Like-a-Hurricane-_8-Bits_.wav" type="AudioStream" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="escena_scorpions" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="scorpions" type="Sprite" parent="."]
position = Vector2( 515.75, 180.829 )
scale = Vector2( 1, 1.53747 )
texture = ExtResource( 1 )

[node name="personaje" parent="scorpions" instance=ExtResource( 2 )]
position = Vector2( -420.597, 30.1892 )
scale = Vector2( 0.6, 0.4 )
collision_mask = 18

[node name="Camera2D" type="Camera2D" parent="scorpions/personaje"]
position = Vector2( 1.61627, 1.54877 )
current = true
limit_left = 0
limit_top = 0
limit_right = 947
limit_bottom = 362
editor_draw_limits = true

[node name="spawner2" type="Node2D" parent="scorpions"]
position = Vector2( 0, 50 )
script = ExtResource( 8 )
enemy_scene = ExtResource( 3 )

[node name="Timer" type="Timer" parent="scorpions/spawner2"]
wait_time = 3.0

[node name="spawner_vida" type="Node2D" parent="scorpions"]
position = Vector2( -16.2679, 61.6955 )
script = ExtResource( 9 )
objeto_vida_scene = ExtResource( 6 )

[node name="Timer_vida" type="Timer" parent="scorpions/spawner_vida"]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="scorpions"]
stream = ExtResource( 10 )
autoplay = true

[node name="TileMap" type="TileMap" parent="."]
visible = false
position = Vector2( -1, 0 )
scale = Vector2( 1, 0.6 )
mode = 2
tile_set = SubResource( 2 )
cell_size = Vector2( 63, 68 )
cell_quadrant_size = 15
collision_layer = 25
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 16, 0, 0, 131071, 0, 0, 65552, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 262143, 0, 0, 196624, 0, 0, 327679, 0, 0, 262160, 0, 0, 393215, 0, 0, 327696, 0, 0, 458751, 0, 0, 393232, 0, 0, 524287, 0, 0, 458768, 0, 0, 589823, 0, 0, 524304, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0 )

[node name="enemigo" parent="." instance=ExtResource( 3 )]
position = Vector2( 367.621, 261.599 )
scale = Vector2( 1.6, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="barra_de_vida" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 41.9568
margin_top = 4.75852
margin_right = -143.043
margin_bottom = -0.241486

[node name="objeto_vida" parent="." instance=ExtResource( 6 )]
position = Vector2( 536.466, 221.125 )

[node name="puntajeUI" parent="." instance=ExtResource( 5 )]
margin_left = 428.787
margin_top = 8.25126
margin_right = 428.787
margin_bottom = 8.25126

[connection signal="timeout" from="scorpions/spawner2/Timer" to="scorpions/spawner2" method="_on_Timer_timeout"]
[connection signal="timeout" from="scorpions/spawner_vida/Timer_vida" to="scorpions/spawner_vida" method="_on_Timer_vida_timeout"]
